[gd_scene load_steps=17 format=3 uid="uid://g1ed30l3famx"]

[ext_resource type="PackedScene" uid="uid://c7oo7xchy4sh8" path="res://Scenes/MessageExplorer/MessageLabel.tscn" id="1_6bp64"]
[ext_resource type="Script" uid="uid://bcgiy6o71q8j4" path="res://Scenes/main.gd" id="1_344ge"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="2_344ge"]
[ext_resource type="PackedScene" uid="uid://dkywhwpridllm" path="res://Scenes/MessageExplorer/MenuBar.tscn" id="2_ynf5e"]
[ext_resource type="Script" uid="uid://2v7ysxd0i4ok" path="res://Scenes/scroll_container.gd" id="3_hptm8"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="3_ynf5e"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="4_hptm8"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="5_d1ilt"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="6_6iyac"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="7_fdnlq"]

[sub_resource type="Resource" id="Resource_344ge"]
resource_local_to_scene = true
script = ExtResource("2_344ge")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_ynf5e"]
resource_local_to_scene = true
script = ExtResource("3_ynf5e")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_hptm8"]
resource_local_to_scene = true
script = ExtResource("4_hptm8")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_d1ilt"]
resource_local_to_scene = true
script = ExtResource("5_d1ilt")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_6iyac"]
resource_local_to_scene = true
script = ExtResource("6_6iyac")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_fdnlq"]
resource_local_to_scene = true
script = ExtResource("7_fdnlq")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_344ge")

[node name="MenuBar" parent="." node_paths=PackedStringArray("main") instance=ExtResource("2_ynf5e")]
layout_mode = 0
main = NodePath("..")

[node name="MessageBox" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 41.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.189235, 0.189235, 0.189235, 1)

[node name="BottomBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.462745, 0.462745, 0.462745, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -5.0
offset_right = -34.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="TotalMessages" type="Label" parent="BottomBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="CurrentChunk" type="Label" parent="BottomBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="ParsingLabel" type="Label" parent="BottomBar/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Parsing..."

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.8
offset_top = 56.697
offset_right = -125.601
offset_bottom = -45.303
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00547, 1.00547)
horizontal_scroll_mode = 3
script = ExtResource("3_hptm8")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2560, 1438)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="TextLabel" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_6bp64")]
layout_mode = 2
h1 = SubResource("Resource_344ge")
h2 = SubResource("Resource_ynf5e")
h3 = SubResource("Resource_hptm8")
h4 = SubResource("Resource_d1ilt")
h5 = SubResource("Resource_6iyac")
h6 = SubResource("Resource_fdnlq")
